# azrael

./: .gitignore  README.md  azrael.cabal  azrail.cabal
app/: Main.hs  Options.hs
lib/Azure/Storage/: Blob.hs
lib/Control/Monad/: Lazy.hs
