cabal-version:        2.4
name:                 azrael
version:              0.1.0.0
synopsis:             Azure REST API Essentials Library
description:          A library of RESR bindings to Azure services
license:              MIT
author:               Alexey Raga <alexey.raga@gmail.com>
maintainer:           Alexey Raga <alexey.raga@gmail.com>
category:             Network, Azure, Cloud
build-type:           Simple
extra-source-files:   README.md

common common
  default-language:     Haskell2010
  build-depends:        base >=4.12 && <4.13
                      , base64-bytestring
                      , bytestring
                      , http-client
                      , lens
                      , network-uri
                      , text
                      , wreq


library
  import:               common
  hs-source-dirs:       lib
  exposed-modules:      Azure.Storage.Blob
  other-modules:        Control.Monad.Lazy

executable azrael
  import:               common
  hs-source-dirs:       app
  main-is:              Main.hs
  other-modules:        Options
  build-depends:        azrael
                      , optparse-applicative

test-suite azrael-test
  import:               common
  hs-source-dirs:       test
  type:                 exitcode-stdio-1.0
  main-is:              MyLibTest.hs
  build-depends:        azrael
